<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/rankedStatsBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:gravity="end"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leastGamesForPackLabel" />

    <TextView
        android:id="@+id/casualStatsBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:gravity="end"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rankedStatsBox" />

    <TextView
        android:id="@+id/packsPerGameLabel"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/packs_per_game"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minPercentageLabel" />

    <TextView
        android:id="@+id/packsPerGameBox"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:gravity="end"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minPercentageBox" />

    <TextView
        android:id="@+id/gamesSinceLastPackBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:gravity="center_horizontal"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/packsPerGameBox" />

    <TextView
        android:id="@+id/mostSinceLastPackBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:gravity="center_horizontal"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamesSinceLastPackBox" />

    <TextView
        android:id="@+id/leastSinceLastPackBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:gravity="center_horizontal"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostSinceLastPackBox" />

    <TextView
        android:id="@+id/percentageLabel"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/percentage"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentageBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:gravity="center_horizontal"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alphaPacksLabel"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/num_alpha_packs"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentageLabel" />

    <TextView
        android:id="@+id/gameCountLabel"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/num_games"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alphaPacksLabel" />

    <TextView
        android:id="@+id/numAlphaPacksBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:gravity="center_horizontal"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentageBox" />

    <TextView
        android:id="@+id/numGamesBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:gravity="end"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alphaPacksLabel" />

    <Switch
        android:id="@+id/rankedCasualSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginBottom="16dp"
        android:text="@string/casual"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/casualLabel"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/ranked"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/winButton"
        app:layout_constraintStart_toEndOf="@+id/rankedCasualSwitch" />

    <Switch
        android:id="@+id/vipSwitch"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="16dp"
        android:text="@string/vip"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lossButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/winButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="16dp"
        android:onClick="gameWin"
        android:text="@string/win"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lossButton"
        app:layout_constraintStart_toEndOf="@+id/resetButton" />

    <Button
        android:id="@+id/lossButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="16dp"
        android:onClick="gameLoss"
        android:text="@string/loss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginBottom="16dp"
        android:onClick="resetNums"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/maxPercentageBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:gravity="center_horizontal"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numGamesBox" />

    <TextView
        android:id="@+id/minPercentageBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:gravity="center_horizontal"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPercentageBox" />

    <TextView
        android:id="@+id/maxPercentageLabel"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/max"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameCountLabel" />

    <TextView
        android:id="@+id/minPercentageLabel"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/min"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPercentageLabel" />

    <TextView
        android:id="@+id/gamesSinceLastPackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/games_since_last_pack"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/packsPerGameLabel" />

    <TextView
        android:id="@+id/mostGamesForPackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/most_games_for_pack"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamesSinceLastPackLabel" />

    <TextView
        android:id="@+id/leastGamesForPackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/least_games_for_pack"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostGamesForPackLabel" />

    <TextView
        android:id="@+id/rankedStatsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/ranked_label"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leastGamesForPackLabel" />

    <TextView
        android:id="@+id/casualStatsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/casual_label"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rankedStatsLabel" />

    <TextView
        android:id="@+id/avgPercentageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/average"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casualStatsLabel" />

    <TextView
        android:id="@+id/avgPercentageBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:textColor="@color/whiteText"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casualStatsBox" />

</android.support.constraint.ConstraintLayout>